--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,32 +2,24 @@ name: Scheduled Scraper
 
 on:
   schedule:
-    - cron: '*/30 * * * *'    # every 30 minutes
-  workflow_dispatch:        # manual trigger
+    - cron: '*/30 * * * *'
+  workflow_dispatch:
 
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run scrapers
+      - name: Run headless scraper
         env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          SUPABASE_URL:        ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY:        ${{ secrets.SUPABASE_KEY }}
           GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
-          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
-        run: |
-          python app.py
+          RAPIDAPI_KEY:        ${{ secrets.RAPIDAPI_KEY }}
+        run: python scrapers.py
