ci: point workflow at root scrapers.py

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -10,16 +10,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run headless scraper
         env:
           SUPABASE_URL:        ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY:        ${{ secrets.SUPABASE_KEY }}
           GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
           RAPIDAPI_KEY:        ${{ secrets.RAPIDAPI_KEY }}
-        run: python scrapers.py
+        run: python3 scrapers.py
