--- a/.env
+++ b/.env
@@ -2,3 +2,17 @@ SUPABASE_URL=https://pwkbszsljlpxhlfcvder.supabase.co
 SUPABASE_KEY=eyJhbGciOiJIUzI1Ni...
 GOOGLE_MAPS_API_KEY=AIzaSyDg-FHCd...
 RAPIDAPI_KEY=88a3a41f80msh37d91f3065ad897p19f149jsnab96bb20afbc
+SUPABASE_URL=https://pwkbszsljlpxhlfcvder.supabase.co
+SUPABASE_KEY=your_supabase_key
+TWILIO_SID=your_twilio_sid
+TWILIO_TOKEN=your_twilio_token
+TWILIO_FROM=+18336085980
+ALERT_PHONE_TO=4692782175
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=perkal1992@gmail.com
+EMAIL_PASS=Pollo2023?!
+ALERT_EMAIL_TO=perkal1992@gmail.com
+AIRTABLE_BASE_ID=appXXXXXXXXXXXXXX
+AIRTABLE_TABLE_NAME=leads
+AIRTABLE_API_KEY=keyXXXXXXXXXXXXXX
