🧹 Ignore .streamlit folder and stray file

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 
 # Old scraper script
 scraper.py
+.streamlit/
+h that version to production-automation branch
+.streamlit/
+h that version to production-automation branch
