--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,3 @@
-SUPABASE_URL     = "https://your-project.supabase.co"
-SUPABASE_KEY     = "YOUR-SUPABASE-KEY"
-GOOGLE_MAPS_API_KEY = "YOUR-GOOGLE-MAPS-KEY"
-RAPIDAPI_KEY     = "YOUR-RAPIDAPI-KEY"
+# replace the placeholders below with your real Supabase info
+SUPABASE_URL = "https://YOUR-PROJECT-REF.supabase.co"
+SUPABASE_KEY = "YOUR-SERVICE-ROLE-KEY"
