--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-+ matplotlib
 streamlit
 pandas
 requests
-schedule
 beautifulsoup4
 supabase
 email-validator
-python-dotenv>=0.21.0
 python-dotenv
+altair
