--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,12 +2,13 @@ name: Scheduled Scraper
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: "*/30 * * * *"
   workflow_dispatch:
 
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
@@ -22,8 +23,10 @@ jobs:
 
       - name: Run headless scraper
         env:
-          SUPABASE_URL:        ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY:        ${{ secrets.SUPABASE_KEY }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
           GOOGLE_MAPS_API_KEY: ${{ secrets.GOOGLE_MAPS_API_KEY }}
-          RAPIDAPI_KEY:        ${{ secrets.RAPIDAPI_KEY }}
-        run: python3 scrapers.py
+          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
+        run: |
+          echo "Starting scraper at $(date)"
+          python3 scrapers.py || echo "Scraper failed with code $?"
